--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,22 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+node_modules
+
+# Next.js
+/.next/
+/out/
+/build
+.DS_Store
+*.pem
+
+# Debug
+npm-debug.log*
+yarn-debug.log*
+pnpm-debug.log*
+
+# Local Env Files
+.env*.local
+
+# Vercel
+.vercel
